# emberviewer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/ember-net/: Cargo.toml
crates/ember-net/examples/: walk.rs
crates/ember-net/src/: connection.rs  lib.rs
crates/ember-net/tests/: multi_frame.rs
crates/ember-proto/: Cargo.toml
crates/ember-proto/src/: glow.rs  lib.rs  s101.rs
crates/ember-proto/tests/: fixtures.rs
crates/ember-web-proto/: Cargo.toml
crates/ember-web-proto/src/: lib.rs
crates/emberviewer/: Cargo.toml  build.rs
crates/emberviewer/src/: address_book.rs  app.rs  debug_log.rs  discovery.rs  fsutil.rs  hub.rs  lib.rs  main.rs  matrix_view.rs  model.rs  net.rs  server.rs  settings.rs  update.rs  web.rs  web_transport.rs  widgets.rs  wire.rs
crates/emberviewer/tests/data/: vpb_matrix_dir.hex
crates/emberviewer/web/: index.html
docs/: README.md  index.html  protocol.html  protocol.md  style.css
scripts/: build-web.sh
testprovider/: capture.js  capture_phase4.js  capture_phase5.js  capture_proxy.js  fixtures.md  fixtures_phase4.md  fixtures_phase5.md  package.json  server.js
