[workspace]
resolver = "2"
members = [
    "crates/ember-proto",
    "crates/ember-net",
    "crates/ember-web-proto",
    "crates/emberviewer",
]

[workspace.package]
version = "0.2.8"
edition = "2021"
license = "MIT"
repository = "https://github.com/mattlamb99/emberviewer"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
anyhow = "1"
