[package]
name = "ember-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async tokio TCP transport for Ember+ (wraps ember-proto)"

[dependencies]
ember-proto = { path = "../ember-proto" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
