[package]
name = "emberviewer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform Ember+ viewer — browse providers, view and set values"

[dependencies]
ember-proto = { path = "../ember-proto" }
ember-net = { path = "../ember-net" }
ember-web-proto = { path = "../ember-web-proto" }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
thiserror.workspace = true
directories = "6"
eframe = "0.34.3"
egui = "0.34.3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
mdns-sd = "0.20.0"
axum = { version = "0.8", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
rand = "0.8"
